# vglobal

./: README.md  pyoxidizer.bzl  pyproject.toml  requirements.txt
.github/workflow/: build.yml
.github/workflows/: build.yml
vglobal/: Home.py  __main__.py
vglobal/pages/: Query.py  Set.py
