[tool.poetry]
name = "vglobal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pyoxidizer = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
